<resources>
    <string name="app_name">Pokedex</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="base_stats">Base Stats</string>
    <string name="abilities">Abilities</string>
    <string name="moves">Moves</string>
    <string name="action_catch">Catch</string>
    <string name="failed_to_catch">Failed to catch %1$s</string>
    <string name="successfully_catch">Successfully catch %1$s</string>
    <string name="action_release">Release</string>
    <string name="action_rename">Rename</string>
    <string name="successfully_release">Successfully release</string>
    <string name="failed_release">Failed release</string>
</resources>