<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_back" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="3dp"
                app:cardBackgroundColor="@color/red"
                app:cardCornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_sprite"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleType="fitXY" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_types"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginBottom="16dp"
                        tools:itemCount="1"
                        tools:listitem="@layout/item_type" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_title"
                style="@style/BaseFont_Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="24dp"
                android:text="Bulbasaur"
                android:textColor="@color/sooty"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_profile" />

            <LinearLayout
                android:id="@+id/btn_rename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/bg_round_green_12dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackgroundBorderless"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toEndOf="@id/tv_title"
                app:layout_constraintTop_toTopOf="@id/tv_title">

                <TextView
                    style="@style/BaseFont_Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_rename"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:id="@+id/line"
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="12dp"
                android:background="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <LinearLayout
                android:id="@+id/container_stats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line">

                <TextView
                    android:id="@+id/tv_base_stats"
                    style="@style/BaseFont_Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/base_stats"
                    android:textColor="@color/sooty"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_stats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="12dp"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_stat" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_ability"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_stats">

                <TextView
                    android:id="@+id/tv_abilities"
                    style="@style/BaseFont_Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/abilities"
                    android:textColor="@color/sooty"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_abilities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="12dp"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_ability" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_move"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_ability">

                <TextView
                    android:id="@+id/tv_moves"
                    style="@style/BaseFont_Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/moves"
                    android:textColor="@color/sooty"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_moves"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="60dp"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_move" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/btn_catch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_round_green_12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackgroundBorderless"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_pokemon"
            app:tint="@color/white" />

        <TextView
            style="@style/BaseFont_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/action_catch"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_round_red_12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackgroundBorderless"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            style="@style/BaseFont_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_release"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#40FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>